# grace

./: .gitignore  Makefile  README.md  arhitecture.txt  dpg.ll  dune-project  grace.opam  gracec.opam
_build/: .db  .digest-db  log
_build/default/: grace.dune-package
_build/default/.dune/: configurator  configurator.v2
lib/: ast.ml  ast.mli  ast_old.ml  ast_utils.ml  codegen.ml  codegen_old.ml  codegen_other.ml  dune  error.ml  gift.ml  impeccable.ml  lexer.mll  lexer_utils.ml  parser.mly  print_ast.ml  print_symbol.ml  sem.ml  symbol.ml  tokens.mly  types.ml  wrapper.ml
lib/lexer/: dune  lexer.mll  utils.ml
lib/parser/: ast.ml  dune  parser.mly  print_ast.ml
lib/tokens/: dune  tokens.mly
misc/: parser_old.mly
misc/parser/: parser.mly
programs/: non_terminated_string.grc
programs-from-subject-github/programs/: arrays.grc
programs/correct/: program11.grc  program12.grc  program4.grc
programs/erroneous/: program4.grc  program6.grc
runtime_lib/: .gitignore  Makefile  a.out  ascii.c  change_syms  chr.c  lib_gen.sh  program  program.c  readChar.c  readInteger.c  readString.c  theprogram.c  writeChar.c  writeInteger.c  writeString.c
runtime_lib/stdio/: Makefile  _readc.c  _readi.c  _reads.c  _writec.c  _writei.c  _writes.c  readc.c  readi.c  reads.c  writei.c  writes.c
runtime_lib/stdlib/: Makefile  _ascii.c  _chr.c  ascii.c  chr.c
runtime_lib/string/: Makefile  _strcat.c  _strcmp.c  _strcpy.c  _strlen.c
sample_programs/: cleanup.sh
sample_programs/correct/: arrays.grc  program10.grc  program13.grc  program3.grc  program8.grc
sample_programs/erroneous/: program10.grc  program12.grc  program7.grc
test/: codegen.ml  croque.ml  dune  lexer.cum  lexer.ml  parser.ml  semantics.expected  semantics.ml  semantics_erroneous.ml  semanticus.expected
test/programs/: .gitignore  README.md  program.grc  program0_1.asm  program0_1.imm  program0_12.grc  program0_16.grc  program0_2.asm  program0_2.grc  program0_2.imm  program0_21.grc  program0_23.grc  program0_24.asm  program0_24.grc  program0_24.imm  program0_4.asm  program0_4.imm  program1.grc  program10.grc  program11.grc  program12.grc  program13.grc  program14.grc  program1_17.grc  program1_18.grc  program2.grc  program3.grc  program6.grc  program7.grc  program9.grc
test/programs/correct/: hanoi.grc  (+3 more)
test/semantics/: 0.grc  1.grc  10.grc  11.grc  12.grc  13.grc  14.grc  15.grc  16.grc  18.grc  19.grc  2.grc  20.grc  22.grc  23.grc  24.grc  26.grc  3.grc  4.grc  5.grc  6.grc  7.grc  8.grc  9.grc
test/semantics_erroneous/: 0.grc  1.grc  10.grc  11.grc  12.grc  13.grc  14.grc  15.grc  16.grc  17.grc  18.grc  2.grc  20.grc  21.grc  22.grc  23.grc  24.grc  25.grc  26.grc  27.grc  28.grc  29.grc  3.grc  30.grc  31.grc  32.grc  33.grc  34.grc  35.grc  36.grc  37.grc  38.grc  39.grc  4.grc  40.grc  41.grc  42.grc  43.grc  44.grc  45.grc  (+10 more)
(+79 files in other folders)
