(library
 (name grace_lib)
 (modules
  (:standard \ codegen_other))
 (libraries
  llvm
  llvm.all_backends
  llvm.analysis
  llvm.ipo
  llvm.scalar_opts
  llvm.target
  llvm.vectorize))

(ocamllex
 (modules lexer))

(menhir
 (modules tokens)
 (flags --only-tokens))

(menhir
 (modules parser tokens)
 (merge_into parser)
 (flags --external-tokens Tokens))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
